[Divyansh Garg] ADD: Done modification for ADMIN Role.